cats/src/main/java/com/example/cats/Error/Response/FactsErrorResponse.java
package com.example.cats.Error.Response;

public class FactsErrorResponse {
    private String errorCode;

    public String getErrorCode() {
        return errorCode;
    }
}
